2008-05-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-mode-map): Bind `q' to quit-window, as is
	the custom.

	* files.el (basic-save-buffer-2): Pass nil rather than (point-min)
	to write-region.

2008-05-28  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (update-elclist): Work around non-portability of "\"
	in various implementations of echo.

2008-05-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/mule-diag.el (describe-current-coding-system):
	Don't assume selection-coding-system is always defined.

	* tar-mode.el: Use defstruct and markers.
	(tar-setf): Remove.
	(tar-header): Use defstruct.  Add `data-start' field.
	(make-tar-desc, tar-desc-tokens): Remove, folded into tar-header.
	(tar-desc-data-start): Remove (now called tar-header-data-start).
	(tar-roundup-512): New fun.
	(tar-header-block-tokenize): Receive a buffer position rather than
	a string.  Handle @longLink here, be more careful about it.
	Create a marker for data-start.
	(tar-summarize-buffer): Don't handle @LongLink here any more.
	(tar-expunge-internal, tar-subfile-save-buffer): Don't update
	data-start on the following entries any more.
	(tar-chown-entry, tar-chgrp-entry): Use read-number.

	* tar-mode.el: Use buffer-swap-text to separate summary and raw data.
	(tar-header-offset): Remove.
	(tar-parse-info, tar-header-offset, tar-file-name-coding-system):
	Not permanent any more.
	(tar-data-buffer): New var.
	(tar-data-swapped-p, tar-change-major-mode-hook)
	(tar-mode-kill-buffer-hook): New funs.
	(tar-untar-buffer, tar-summarize-buffer, tar-mode, tar-mode-revert)
	(tar-extract, tar-copy, tar-expunge-internal, tar-expunge)
	(tar-clear-modification-flags, tar-alter-one-field)
	(tar-subfile-save-buffer, tar-pad-to-blocksize, tar-mode-write-file):
	Change accordingly.

2008-05-27  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-dispatcher.el (vc-directory-resynch-file): Rename to ...
	(vc-dir-resynch-file): ... this.  Update callers.